--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 appdirs==1.4.4
+blinker==1.9.0
 certifi==2020.6.20
 chardet==3.0.4
 charset-normalizer==3.4.1
+click==8.1.8
+Flask==3.1.0
 gophish==0.5.1
 idna==2.10
+importlib_metadata==8.5.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
 packaging==20.4
 pyparsing==2.4.7
 python-dateutil==2.8.1
 requests==2.24.0
 six==1.15.0
 urllib3==1.25.10
+Werkzeug==3.1.3
+zipp==3.21.0
