--- a/gophish_engine/config.json
+++ b/gophish_engine/config.json
@@ -7,10 +7,10 @@
 		"trusted_origins": []
 	},
 	"phish_server": {
-		"listen_url": "0.0.0.0:8080",
+		"listen_url": "0.0.0.0:3001",
 		"use_tls": false,
-		"cert_path": "example.crt",
-		"key_path": "example.key"
+		"cert_path": "",
+		"key_path": ""
 	},
 	"db_name": "sqlite3",
 	"db_path": "gophish.db",
